Fix contrast of dropdown option text color

--- a/app/renderer/components/settings/options.css
+++ b/app/renderer/components/settings/options.css
@@ -48,6 +48,10 @@
   cursor: not-allowed;
 }
 
+.dropdown option {
+  color: black;
+}
+
 .dropdown-primary {
   color: rgba(0, 0, 0, 0.7);
   background: white;
